gen/main/java/CompilerParser.java
// Generated from C:/Users/DIEGOPC/Downloads/PracticaPL/src/main/java\Compiler.g4 by ANTLR 4.12.0
package main.java;

    import java.io.*;
    import java.nio.file.Paths;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, J=34, SPACE=35, TAB=36, CR=37, CONST_DEF_IDENTIFIER=38, 
		IDENTIFIER=39, NUMERIC_INTEGER_CONST=40, NUMERIC_REAL_CONST=41, STRING_CONST=42, 
		COMMENTS=43;
	public static final int
		RULE_program = 0, RULE_dcllist = 1, RULE_dcllist_R = 2, RULE_dcl = 3, 
		RULE_ctedef = 4, RULE_simpvalue = 5, RULE_varlist = 6, RULE_vardef = 7, 
		RULE_tbas = 8, RULE_struct = 9, RULE_tvoid = 10, RULE_funlist = 11, RULE_funlist_R = 12, 
		RULE_funcdef = 13, RULE_funchead = 14, RULE_typedef1 = 15, RULE_typedef2 = 16, 
		RULE_typedef2_R = 17, RULE_sentlist = 18, RULE_mainhead = 19, RULE_code = 20, 
		RULE_code_R = 21, RULE_sent = 22, RULE_if_ = 23, RULE_else_ = 24, RULE_while_ = 25, 
		RULE_dowhile_ = 26, RULE_for_ = 27, RULE_expcond = 28, RULE_expcond_R = 29, 
		RULE_oplog = 30, RULE_factorcond = 31, RULE_opcomp = 32, RULE_return_m = 33, 
		RULE_asig = 34, RULE_exp = 35, RULE_exp_R = 36, RULE_op = 37, RULE_factor = 38, 
		RULE_funccall = 39, RULE_subparamlist = 40, RULE_explist = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "dcllist", "dcllist_R", "dcl", "ctedef", "simpvalue", "varlist", 
			"vardef", "tbas", "struct", "tvoid", "funlist", "funlist_R", "funcdef", 
			"funchead", "typedef1", "typedef2", "typedef2_R", "sentlist", "mainhead", 
			"code", "code_R", "sent", "if_", "else_", "while_", "dowhile_", "for_", 
			"expcond", "expcond_R", "oplog", "factorcond", "opcomp", "return_m", 
			"asig", "exp", "exp_R", "op", "factor", "funccall", "subparamlist", "explist"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'#define'", "'='", "'integer'", "'float'", "'string'", 
			"'struct'", "'{'", "'}'", "'void'", "'('", "')'", "','", "'Main'", "'if'", 
			"'else'", "'while'", "'do'", "'for'", "'||'", "'&'", "'!'", "'<'", "'>'", 
			"'<='", "'>='", "'=='", "'return'", "'+'", "'-'", "'*'", "'DIV'", "'MOD'", 
			"'\\n'", "' '", "'\\t'", "'\\r'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "J", "SPACE", 
			"TAB", "CR", "CONST_DEF_IDENTIFIER", "IDENTIFIER", "NUMERIC_INTEGER_CONST", 
			"NUMERIC_REAL_CONST", "STRING_CONST", "COMMENTS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Compiler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private StringBuilder sb = new StringBuilder();
	    private String args = "";
	    private boolean funlist_finished = false;
	    private boolean funccall_main = false;
	    private boolean funclist_color = false;
	    public void setArgs(String args){
	        this.args = args;
	    }

	public CompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public DcllistContext dcllist;
		public FunlistContext funlist;
		public SentlistContext sentlist;
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public FunlistContext funlist() {
			return getRuleContext(FunlistContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public List<TerminalNode> J() { return getTokens(CompilerParser.J); }
		public TerminalNode J(int i) {
			return getToken(CompilerParser.J, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompilerVisitor ) return ((CompilerVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

			    final String STDIN_NAME = (new File(args)).getName().replaceFirst("[.][^.]+$", "");
			    final String FILE_SEP = System.getProperty("file.separator");
			    final String PATH_VARIABLE = Paths.get(args).getParent().toString() + FILE_SEP;
			    sb.append("<!DOCTYPE html><html><head><title>").append(STDIN_NAME).append("</title>" +
			        "<style>.cte{color:rgb(107, 211, 26);} .palres{color:rgb(0, 0, 0); font-weight: bold;}" +
			        ".ident{color:rgb(77, 77, 255);} .idfunc{color:rgb(26, 26, 255); text-decoration: underline;}</style>" +
			        "</head>").append("<body><h1 id=\"inicio\">").append("Programa: ").append(STDIN_NAME).append("</h1>")
			        .append("<h2>Funciones</h2>").append("<ul>");
			   
			setState(85);
			((ProgramContext)_localctx).dcllist = dcllist();
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(86);
					match(J);
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(92);
			((ProgramContext)_localctx).funlist = funlist();
			sb.append(((ProgramContext)_localctx).funlist.v + "<hr/><a id=\"Main\"><h2>Programa Principal</h2>" + ((ProgramContext)_localctx).dcllist.v
			    + "<br><br>");
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==J) {
				{
				{
				setState(94);
				match(J);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			((ProgramContext)_localctx).sentlist = sentlist();

			        sb.append(((ProgramContext)_localctx).sentlist.v + "<br><a href=\"#Main\">Inicio del programa principal</a> "
			        + " <a href=\"#inicio\">Inicio del programa</a>" + "</a><hr/></body></html>");
			        PrintWriter fich = null;
			        try{
			            final String STDOUT_NAME = PATH_VARIABLE + STDIN_NAME + ".html";
			            fich = new PrintWriter(new BufferedWriter(new FileWriter(STDOUT_NAME)));
			            fich.print(sb.toString());
			        }
			        catch(IOException e){
			            System.err.println("Bad file creator.\n" + e.getMessage());
			            throw new RuntimeException();
			        }
			        finally{
			            if (fich != null)
			                fich.close();
			        }
			   
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DcllistContext extends ParserRuleContext {
		public String v;
		public Dcllist_RContext dcllist_R;
		public Dcllist_RContext dcllist_R() {
			return getRuleContext(Dcllist_RContext.class,0);
		}
		public DcllistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterDcllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitDcllist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompilerVisitor ) return ((CompilerVisitor<? extends T>)visitor).visitDcllist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DcllistContext dcllist() throws RecognitionException {
		DcllistContext _localctx = new DcllistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dcllist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			((DcllistContext)_localctx).dcllist_R = dcllist_R("");
			((DcllistContext)_localctx).v =  ((DcllistContext)_localctx).dcllist_R.v;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Dcllist_RContext extends ParserRuleContext {
		public String h;
		public String v;
		public DclContext dcl;
		public Token J;
		public Dcllist_RContext dcllist_R;
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public Dcllist_RContext dcllist_R() {
			return getRuleContext(Dcllist_RContext.class,0);
		}
		public List<TerminalNode> J() { return getTokens(CompilerParser.J); }
		public TerminalNode J(int i) {
			return getToken(CompilerParser.J, i);
		}
		public Dcllist_RContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Dcllist_RContext(ParserRuleContext parent, int invokingState, String h) {
			super(parent, invokingState);
			this.h = h;
		}
		@Override public int getRuleIndex() { return RULE_dcllist_R; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterDcllist_R(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitDcllist_R(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompilerVisitor ) return ((CompilerVisitor<? extends T>)visitor).visitDcllist_R(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dcllist_RContext dcllist_R(String h) throws RecognitionException {
		Dcllist_RContext _localctx = new Dcllist_RContext(_ctx, getState(), h);
		enterRule(_localctx, 4, RULE_dcllist_R);
		try {
			int _alt;
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				((Dcllist_RContext)_localctx).dcl = dcl();
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(107);
						((Dcllist_RContext)_localctx).J = match(J);
						}
						} 
					}
					setState(112);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(113);
				((Dcllist_RContext)_localctx).dcllist_R = dcllist_R(_localctx.h += ((Dcllist_RContext)_localctx).dcl.v + ((((Dcllist_RContext)_localctx).J!=null?((Dcllist_RContext)_localctx).J.getText():null) == null ? "<br>" : (((Dcllist_RContext)_localctx).J!=null?((Dcllist_RContext)_localctx).J.getText():null)));
				((Dcllist_RContext)_localctx).v =  ((Dcllist_RContext)_localctx).dcllist_R.v;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				((Dcllist_RContext)_localctx).v =  _localctx.h;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DclContext extends ParserRuleContext {
		public String v;
		public CtedefContext ctedef;
		public VardefContext vardef;
		public Token J;
		public CtedefContext ctedef() {
			return getRuleContext(CtedefContext.class,0);
		}
		public VardefContext vardef() {
			return getRuleContext(VardefContext.class,0);
		}
		public TerminalNode J() { return getToken(CompilerParser.J, 0); }
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompilerListener ) ((CompilerListener)listener).exitDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CompilerVisitor ) return ((CompilerVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dcl);
		try {
